--- a/client/src/Components/App/App.module.css
+++ b/client/src/Components/App/App.module.css
@@ -4,6 +4,16 @@
   display: grid;
 }
 
+.darkTheme {
+  background: var(--c_dark);
+  color: var(--c_light);
+}
+
+.lightTheme {
+  background: var(--c_light);
+  color: var(--black);
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
