Made some fixes on styles for dividers

--- a/client/src/Components/Dividers/VerticalDivider/VerticalDivider.module.scss
+++ b/client/src/Components/Dividers/VerticalDivider/VerticalDivider.module.scss
@@ -1,6 +1,6 @@
 .verticalDivider {
 	border: none;
-	&.darkTheme { background: var(c_light); }
-	&.darkTheme { background: var(c_dark); }
+	&.darkTheme { background: var(--c_light); }
+	&.lightTheme { background: var(--black); }
 }
 
