--- a/client/src/Components/Dividers/HorizontalDivider/HorizontalDivider.module.scss
+++ b/client/src/Components/Dividers/HorizontalDivider/HorizontalDivider.module.scss
@@ -1,5 +1,5 @@
 .horizontalDivider {
 	border: none;
-	&.darkTheme { background: var(--black); }
-	&.lightTheme { background: var(--c_light); }
+	&.darkTheme { background: var(--c_light); }
+	&.lightTheme { background: var(--black); }
 }
