Refactoring ArtistTable to work with graphql flow, still debugging a rendering issue.

--- a/client/src/Components/Tables/ArtistTable/ArtistTable.module.scss
+++ b/client/src/Components/Tables/ArtistTable/ArtistTable.module.scss
@@ -29,7 +29,9 @@
 
 .tableBody {
 	display: grid;
-	vertical-align: none;
+	// vertical-align: none;
+	align-content: start;
+	align-items: center;
 
 	height: auto;
 	width: 100%;
