Table height fixed, put divider in between top bar and table

--- a/client/src/Ecosystems/ArtProjectDisplay/ArtProjectDisplay.module.scss
+++ b/client/src/Ecosystems/ArtProjectDisplay/ArtProjectDisplay.module.scss
@@ -1,7 +1,7 @@
 .artistProfileDisplay {
 	//height: calc(100vh - 75px - 350px);
 	width: 100%;
-	min-height: 100%;
+	height: auto;
 	padding: 0px 30px; //30px 30px;
 
 	display: grid;
