--- a/client/src/Components/Galleries/TwoSizeCardGallery/TwoSizeCardGallery.module.scss
+++ b/client/src/Components/Galleries/TwoSizeCardGallery/TwoSizeCardGallery.module.scss
@@ -1,6 +1,7 @@
 .gallery {
 	width: 100%;
 	height: 100%;
+	padding-top: 30px;
 	padding-bottom: 30px;
 
 	display: grid;
@@ -8,7 +9,7 @@
 	grid-template-rows: repeat(auto-fit, var(--cardHeight));
 	justify-content: center;
 	justify-items: center;
-	grid-gap: 1.5rem;
+	grid-gap: 2.5rem;
 	grid-auto-flow: dense;
 	overflow-y: auto;
 
