--- a/client/src/Ecosystems/ArtProjectDisplay/TopBar/TopBar.module.scss
+++ b/client/src/Ecosystems/ArtProjectDisplay/TopBar/TopBar.module.scss
@@ -1,11 +1,21 @@
 .topBar {
-	height: 50px;
+	height: 75px;
 	width: 100%;
 	
 	display: grid;
-	grid-auto-flow: column;
-	grid-template-columns: 4fr 1fr;
+	grid-template-rows: 50px 1fr;
+	align-content: space-between;
+}
+
+.top {
+	width: 100%;
+	height: 100%;
+	grid-auto-flow: row;
+	//grid-template-columns: 4fr 1fr;
+	grid-template-columns: 50% 50%;
 	align-items: center;
+	border: 1px solid green;
+
 }
 
 .left {
@@ -14,6 +24,7 @@
 	display: grid;
 	align-items: center;
 	justify-content: start;
+	//border: 1px solid red;
 }
 
 .right {
@@ -24,4 +35,5 @@
 	grid-gap: 2rem;
 	align-items: center;
 	justify-content: end;
+	//border: 1px solid red;
 }
