--- a/client/src/Ecosystems/ArtProjectDisplay/TopBar/TopBar.module.scss
+++ b/client/src/Ecosystems/ArtProjectDisplay/TopBar/TopBar.module.scss
@@ -10,11 +10,11 @@
 .top {
 	width: 100%;
 	height: 100%;
-	grid-auto-flow: row;
+	display: grid;
+	grid-auto-flow: column;
 	//grid-template-columns: 4fr 1fr;
 	grid-template-columns: 50% 50%;
 	align-items: center;
-	border: 1px solid green;
 
 }
 
@@ -24,7 +24,6 @@
 	display: grid;
 	align-items: center;
 	justify-content: start;
-	//border: 1px solid red;
 }
 
 .right {
@@ -35,5 +34,11 @@
 	grid-gap: 2rem;
 	align-items: center;
 	justify-content: end;
-	//border: 1px solid red;
+}
+
+.bottom {
+	width: 100%;
+	height: 100%;
+	display: grid;
+	align-content: start;
 }
