--- a/client/src/Ecosystems/Search/SearchBar/SearchBar.module.scss
+++ b/client/src/Ecosystems/Search/SearchBar/SearchBar.module.scss
@@ -1,7 +1,7 @@
 .searchBar {
 	width: 100%;
-	height: 100%;
-	padding: 3px 10px;
+	height: 50px;
+	padding: 3px 30px;
 
 	/* Holds the search input and icon/button
 	   in a row together. Depending on viewport
@@ -9,14 +9,10 @@
 	   letting the icon/button have 40px of space. */
 	display: grid;
 	grid-auto-flow: column;
+	grid-template-columns: 1fr 70px;
 	align-items: center;
 	justify-content: end;
-	grid-template-columns: 40px;
 	grid-gap: 0.5rem;
-
-	&.active {
-		grid-template-columns: 6fr 0.75fr 40px;
-	}
 }
 
 .searchField {
