CSS Grid tweaks to TableItem

--- a/client/src/Components/Tables/ArtistTable/TableItem/TableItem.module.scss
+++ b/client/src/Components/Tables/ArtistTable/TableItem/TableItem.module.scss
@@ -27,6 +27,14 @@
 		grid-template-areas: "photo title"
 												 "links links";
 	}
+
+	.profileImage {
+		justify-items: start;
+	}
+
+	.title {
+		justify-items: start;
+	}
 }
 
 .profileImage {
