--- a/client/src/Ecosystems/Search/Search.module.scss
+++ b/client/src/Ecosystems/Search/Search.module.scss
@@ -4,3 +4,55 @@
 	align-content: start;
 	min-height: 100vh;
 }
+
+.searchBar {
+	width: 100%;
+	height: 50px;
+	padding: 3px 30px;
+
+	/* Holds the search input and icon/button
+	   in a row together. Depending on viewport
+	   width, the search input widens up until
+	   letting the icon/button have 40px of space. */
+	display: grid;
+	grid-template-columns: 1fr;
+	align-items: center;
+}
+
+.searchForm {
+	height: 100%;
+	width: 100%;
+	display: grid;
+
+	&.active {
+		&.darkTheme { 
+			border: 2px solid var(--c_light); 
+			border-radius: 5px;
+		}
+		&.lightTheme { 
+			border: 2px solid var(--black); 
+			border-radius: 5px;
+		}
+	}
+}
+
+.searchInput {
+	background: none;
+	border: none;
+
+	&.darkTheme { 
+		color: var(--c_light); 
+	}
+	&.lightTheme { 
+		color: var(--black); 
+	}
+
+	font: {
+		family: var(--sansSerifStack);
+		size: 1.5rem;
+	}
+
+	&:focus {
+		outline: none;
+	}
+}
