Case insensitive artist lookup now functioning at full stack

--- a/client/src/Ecosystems/Search/RecentSearches/RecentSearches.module.scss
+++ b/client/src/Ecosystems/Search/RecentSearches/RecentSearches.module.scss
@@ -9,11 +9,11 @@
 
 .top {
 
-	height: 45px;
+	height: 50px;
 	width: 100%;
 
 	display: grid;
-	grid-template-rows: 30px 1fr;
+	//grid-template-rows: 30px 1fr;
 	align-content: space-between;
 }
 
