Started working on recent searches Artist Card. Built in a loader component as well.

--- a/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
+++ b/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
@@ -2,6 +2,9 @@
 	display: grid;
 	place-items: center;
 	place-content: center;
+	min-height: 100vh;
+	height: 100%;
+	width: 100%;
 }
 
 .lightTheme { background: var(--c_light); }
