Refactored CenteringCradle to stretch remaining vertical height or not.

--- a/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
+++ b/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
@@ -2,9 +2,10 @@
 	display: grid;
 	place-items: center;
 	place-content: center;
-	min-height: 100vh;
 	height: 100%;
 	width: 100%;
+
+	&.stretch { min-height: 100vh; }
 }
 
 .lightTheme { background: var(--c_light); }
