--- a/client/src/Ecosystems/Search/RecentSearches/RecentSearches.module.scss
+++ b/client/src/Ecosystems/Search/RecentSearches/RecentSearches.module.scss
@@ -1,6 +1,7 @@
 .recentSearches {
-	// height: 100%;
-	// width: 100%;
+	height: 100%;
+	width: 100%;
+	
 
 	display: grid;
 	grid-template-rows: 50px 1fr;
@@ -17,10 +18,36 @@
 	align-content: space-between;
 }
 
-.recentSearchList {
+.recentSearchGallery {
+	width: 100%;
 	height: 100%;
-  width: 100%;
+	min-height: 100vh;
+	padding-top: 30px;
+	padding-bottom: 30px;
+
 	display: grid;
+	grid-template-columns: repeat(auto-fill, 350px);
+	grid-template-rows: auto;
+	justify-content: center;
+	justify-items: center;
+	grid-gap: 1rem;
+
+	&.darkTheme {
+		background: var(--c_dark);
+	}
+
+	&.lightTheme {
+		background: var(--white);
+	}
+
+
+	@media(max-width: 960px) {
+		grid-template-columns: repeat(auto-fill, 375px);
+	}
+
+	@media(max-width: 750px) {
+		grid-template-columns: repeat(auto-fill, 100%);
+	}	
 }
 
 ul {
