--- a/client/src/Components/Loaders/CircleLoader/CircleLoader.module.scss
+++ b/client/src/Components/Loaders/CircleLoader/CircleLoader.module.scss
@@ -12,7 +12,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border: 4px solid #BEB69D;
+  // border: 4px solid #BEB69D;
   position: relative;
   animation: spin 1.25s infinite linear;
   
