--- a/client/src/Components/Cradles/FromTheTopCradle/FromTheTopCradle.module.scss
+++ b/client/src/Components/Cradles/FromTheTopCradle/FromTheTopCradle.module.scss
@@ -1,6 +1,5 @@
 .cradle {
 	height: 100%;
-	min-height: 100vh;
 	width: 100%;
 	padding-bottom: 30px;
 
@@ -8,6 +7,8 @@
 	grid-template-rows: 1fr;
 	overflow-y: auto;
 	align-content: start;
+
+	&.stretch { min-height: 100vh; }
 
 	&.darkTheme{ 
 		background: var(--c_dark); 
