Got an MVP version of a full profile card rendering.

--- a/client/src/Components/Cards/SmallArtProjectCard/SmallArtProjectCard.module.scss
+++ b/client/src/Components/Cards/SmallArtProjectCard/SmallArtProjectCard.module.scss
@@ -49,3 +49,10 @@
 		width: 100%;
 	}
 }
+
+a {
+	text-decoration: none;
+
+	&.darkTheme { color: var(--c_light); }
+	&.lightTheme { color: var(--black); }
+}
