--- a/client/src/Components/SignIn/SignIn.module.scss
+++ b/client/src/Components/SignIn/SignIn.module.scss
@@ -1,3 +1,12 @@
 .signIn {
-	
+
+	z-index: var(--modalZIndex);	
+
+	&.darkTheme {
+		background: var(--black);
+	}
+
+	&.lightTheme {
+		background: var(--c_light);
+	}
 }
