Changed light theme background color to light grey instead of white. Working on styling SignIn form

--- a/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
+++ b/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
@@ -8,5 +8,5 @@
 	&.stretch { min-height: 100vh; }
 }
 
-.lightTheme { background: var(--c_light); }
+.lightTheme { background: var(--c_lowContrastLightTheme); }
 .darkTheme { background: var(--c_dark); }
