--- a/client/src/Components/Cradles/FromTheTopCradle/FromTheTopCradle.module.scss
+++ b/client/src/Components/Cradles/FromTheTopCradle/FromTheTopCradle.module.scss
@@ -15,7 +15,7 @@
 		color: var(--c_light);
 	}
 	&.lightTheme{ 
-		background: var(--c_light); 
+		background: var(--c_lowContrastLightTheme); 
 		color: var(--c_dark);
 	}
 
