--- a/client/src/Ecosystems/ArtProjectDisplay/ArtProjectDisplay.module.scss
+++ b/client/src/Ecosystems/ArtProjectDisplay/ArtProjectDisplay.module.scss
@@ -12,7 +12,7 @@
 
 	background: transparent;
 
-	&.darkTheme { color: var(--c_light); }
+	&.darkTheme { color: var(--c_lowContrastLightTheme); }
 	&.lightTheme { color: var(--black); }	
 
 	& h3 {
@@ -32,7 +32,7 @@
 	place-items: center;
 	place-content: center;
 
-	&.darkTheme { color: var(--c_light); }
+	&.darkTheme { color: var(--c_lowContrastLightTheme); }
 	&.lightTheme { color: var(--black); }
 
 	& h4 {
