--- a/client/src/Ecosystems/HomePage/HomePage.module.scss
+++ b/client/src/Ecosystems/HomePage/HomePage.module.scss
@@ -21,7 +21,7 @@
 	}
 
 	&.lightTheme {
-		background: var(--c_light);
+		background: var(--c_lowContrastLightTheme);
 		color: var(--black);
 	}
 }
