--- a/client/src/Components/Login/Login.module.scss
+++ b/client/src/Components/Login/Login.module.scss
@@ -1,8 +1,7 @@
 .login {
-
-	height: 250px;
+	height: auto;
+	min-height: 250px;
 	width: 300px;
-	padding: 10px 30px;
 
 	z-index: var(--modalZIndex);	
 
@@ -20,33 +19,38 @@
 
 	display: grid;
 	grid-template-rows: 50px 1fr;	
-	
-	& h1 {
-		text-decoration: underline;
-	}
 }
 
 
 .titleBar {
 	height: 100%;
 	width: 100%;
+	padding: 10px 30px;
+
 	display: grid;
 	align-items: center;
 
-	&.darkTheme { background: var(--black); }
-	&.lightTheme { background: var(--c_light); }
+	&.darkTheme { 
+		background: var(--c_light);
+		color: var(--black); 
+	}
+
+	&.lightTheme { 
+		background: var(--black);
+		color: var(--c_light); 
+	}
+
+	&.rounded { border-radius: 5px 5px 0px 0px; }
 }
 
 .formBody {
 	height: 100%;
 	width: 100%;
-	padding: 10px 0px;
+	padding: 10px 30px 10px 30px;
 
 	display: grid;
 	grid-gap: 1.5rem;
 	align-content: space-around;
-
-
 }
 
 .label {
@@ -56,16 +60,74 @@
 	&.darkTheme { color: var(--c_light); }
 	&.lightTheme { color: var(--black); }
 
-	& input {
+	input {
 		background-image: none !important;
-		padding: 5px 2.5px;
+		border: none;
+	}
+
+	.input {
+		padding: 3px 2.5px 7.5px 2.5px;
 		font-size: 1.5rem;
+
+		&.darkTheme { 
+			background: var(--black);
+			color: var(--c_light);
+			border-bottom: 1.5px solid var(--c_light);
+		}
+
+		&.lightTheme {
+			background: var(--c_light);
+			color: var(--black);
+			border-bottom: 1.5px solid var(--black);
+		}
 	}
 }
 
+.bottom {
+	height: auto;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	grid-auto-flow: column;
 
+	.right {
+		display: grid;
+		justify-content: end;
+		justify-items: end;
+		align-content: center;
+		grid-gap: 0.2rem;
 
+		a {
+			display: grid;
+			justify-items: end;
+		}
+	}
+}
 
+a {
+
+	// width: auto;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+
+	color: inherit;
+
+	display: grid;
+	place-items: center;
+
+	&:link {
+		text-decoration: none;
+
+		&:active { color: none; }
+	}
+
+	&:visited {
+		text-decoration: none;
+
+		&:active { color: none; }
+	}
+}
 
 
 
