Login, Registration, and Request Password Reset forms are written.

--- a/client/src/Components/Register/Register.module.scss
+++ b/client/src/Components/Register/Register.module.scss
@@ -1,4 +1,4 @@
-.login {
+.register {
 	height: auto;
 	min-height: 250px;
 	width: 300px;
@@ -87,8 +87,6 @@
 	height: auto;
 	width: 100%;
 	display: grid;
-	grid-template-columns: 1fr 2fr;
-	grid-auto-flow: column;
 
 	.right {
 		display: grid;
