--- a/client/src/Components/Login/Login.module.scss
+++ b/client/src/Components/Login/Login.module.scss
@@ -2,6 +2,7 @@
 	height: auto;
 	min-height: 250px;
 	width: 300px;
+	position: relative;
 
 	z-index: var(--modalZIndex);	
 
@@ -47,6 +48,7 @@
 	height: 100%;
 	width: 100%;
 	padding: 10px 30px 20px 30px;
+	position: relative;
 
 	display: grid;
 	grid-gap: 1.5rem;
