--- a/client/src/Components/Nav/Nav.module.scss
+++ b/client/src/Components/Nav/Nav.module.scss
@@ -1,6 +1,6 @@
 .navbar {
 
-	height: 75px;
+	height: 65px;
 	width: 100%;
 	padding: 0px 30px 0px 30px;
 	z-index: var(--navbarZIndex);
@@ -15,13 +15,13 @@
 	&.darkTheme {
 		color: var(--c_light);
 		background: var(--c_dark);
-		// box-shadow: var(--boxShadowDarkTheme);
+		box-shadow: var(--boxShadowDarkTheme);
 	}
 
 	&.lightTheme {
 		color: var(--black);
 		background: var(--c_light);
-		// box-shadow: var(--boxShadowLightTheme);
+		box-shadow: var(--boxShadowLightTheme);
 	}
 
 }
