--- a/client/src/Components/Nav/Nav.module.scss
+++ b/client/src/Components/Nav/Nav.module.scss
@@ -14,7 +14,7 @@
 
 	&.darkTheme {
 		color: var(--c_light);
-		background: var(--c_dark);
+		background: var(--black);
 		box-shadow: var(--boxShadowDarkTheme);
 	}
 
