Refacted dark mode on form components to keep design language consistent with dark theme twosizecards

--- a/client/src/Components/RequestReset/RequestReset.module.scss
+++ b/client/src/Components/RequestReset/RequestReset.module.scss
@@ -3,12 +3,15 @@
 	min-height: 250px;
 	width: 300px;
 	position: relative;
+	display: grid;
+	grid-template-rows: 50px 1fr;	
 
 	z-index: var(--modalZIndex);	
 
 	&.darkTheme {
 		background: var(--black);
 		box-shadow: var(--boxShadowDarkTheme);
+		grid-template-rows: 50px 20px 1fr;	
 	}
 
 	&.lightTheme {
@@ -18,8 +21,6 @@
 
 	&.rounded { border-radius: 5px; }
 
-	display: grid;
-	grid-template-rows: 50px 1fr;	
 }
 
 
@@ -32,15 +33,15 @@
 	align-items: center;
 
 	&.darkTheme { 
-		background: var(--c_light);
-		color: var(--black); 
+		background: var(--black);
+		color: var(--c_light); 
 	}
 
 	&.lightTheme { 
 		background: var(--black);
 		color: var(--c_light); 
 	}
-
+	
 	&.rounded { border-radius: 5px 5px 0px 0px; }
 }
 
