--- a/client/src/Components/Register/Register.module.scss
+++ b/client/src/Components/Register/Register.module.scss
@@ -3,12 +3,15 @@
 	min-height: 250px;
 	width: 300px;
 	position: relative;
+	display: grid;
+	grid-template-rows: 50px 1fr;	
 
 	z-index: var(--modalZIndex);	
 
 	&.darkTheme {
 		background: var(--black);
 		box-shadow: var(--boxShadowDarkTheme);
+		grid-template-rows: 50px 20px 1fr;	
 	}
 
 	&.lightTheme {
@@ -18,8 +21,6 @@
 
 	&.rounded { border-radius: 5px; }
 
-	display: grid;
-	grid-template-rows: 50px 1fr;	
 }
 
 
@@ -27,13 +28,14 @@
 	height: 100%;
 	width: 100%;
 	padding: 10px 30px;
+	text-decoration: underline;
 
 	display: grid;
 	align-items: center;
 
 	&.darkTheme { 
-		background: var(--c_light);
-		color: var(--black); 
+		background: var(--black);
+		color: var(--c_light); 
 	}
 
 	&.lightTheme { 
