Created AddPersonIcon, Dividers can express themselves as subtle, using the low contrast colors for the dark and light theme.

--- a/client/src/Components/Dividers/VerticalDivider/VerticalDivider.module.scss
+++ b/client/src/Components/Dividers/VerticalDivider/VerticalDivider.module.scss
@@ -2,5 +2,7 @@
 	border: none;
 	&.darkTheme { background: var(--c_light); }
 	&.lightTheme { background: var(--black); }
+	&.darkThemeSubtle { background: var(--c_lowContrastDarkTheme); }
+	&.lightThemeSubtle { background: var(--c_lowContrastLightTheme); }	
 }
 
