--- a/client/src/Components/Dividers/HorizontalDivider/HorizontalDivider.module.scss
+++ b/client/src/Components/Dividers/HorizontalDivider/HorizontalDivider.module.scss
@@ -2,4 +2,6 @@
 	border: none;
 	&.darkTheme { background: var(--c_light); }
 	&.lightTheme { background: var(--black); }
+	&.darkThemeSubtle { background: var(--c_lowContrastDarkTheme); }
+	&.lightThemeSubtle { background: var(--c_lowContrastLightTheme); }
 }
