Working through EditProfile component. Modularizing sections into their own subcomponents for readability and modularity of logic and layout and all that.

--- a/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
+++ b/client/src/Components/Cradles/CenteringCradle/CenteringCradle.module.scss
@@ -2,8 +2,11 @@
 	display: grid;
 	place-items: center;
 	place-content: center;
-	height: 100%;
+	height: auto;
 	width: 100%;
+	//overflow-y: scroll;
+
+	padding: 20px 30px;
 
 	&.stretch { min-height: 100vh; }
 }
