Basic info and biography sections of user profile detail form are sketched out, working on social media links and art projects still.

--- a/client/src/Components/EditUserDetails/EditUserDetails.module.scss
+++ b/client/src/Components/EditUserDetails/EditUserDetails.module.scss
@@ -88,13 +88,28 @@ a {
 	}
 }
 
-.basicDetails {
+.sectionTitleBar {
+	width: 100%;
+	height: auto;
+	padding: 5px 0px;
+
+	display: grid;
+	grid-auto-flow: column;
+	justify-content: space-between;
+	align-content: center;
 
 }
 
-.biography {
-	
-}
+
+
+
+
+
+
+
+
+
+
 
 
 
