--- a/client/src/Components/TextArea/TextArea.module.scss
+++ b/client/src/Components/TextArea/TextArea.module.scss
@@ -1,11 +1,12 @@
 .textArea {
 	max-width: 100%;
 	width: 100%;
+	min-height: 150px;
 	height: auto;
 	resize: vertical;
 	border: none;
 
-	padding: 3px 2.5px 7.5px 2.5px;
+	padding: 3px 5px 7.5px 5px;
 	font-size: 1.5rem;
 
 	&.darkTheme { 
