--- a/client/src/Ecosystems/EditUserDetails/BasicInfo/BasicInfo.module.scss
+++ b/client/src/Ecosystems/EditUserDetails/BasicInfo/BasicInfo.module.scss
@@ -5,4 +5,22 @@
 	display: grid;
 	grid-gap: 1.5rem;
 	align-content: space-around;
+	// grid-template-columns: repeat(auto-fill, );
+	// justify-items: center;
+	// justify-content: center;
+
+	@media(max-width: 800px) {
+		width: 100%;
+		align-content: space-around;
+		justify-content: center;
+		grid-template-columns: 1fr;
+		grid-auto-flow: row;
+	}
+}
+
+.bottom {
+	width: 100%;
+	height: auto;
+	display: grid;
+	place-content: center;
 }
