--- a/client/src/Ecosystems/User/EditUserDetails/ProfilePhotoButton/ProfilePhotoButton.module.scss
+++ b/client/src/Ecosystems/User/EditUserDetails/ProfilePhotoButton/ProfilePhotoButton.module.scss
@@ -4,7 +4,7 @@
 	width: 100px;
 	border-radius: 50px;
 	border: none;
-	transition: all 0.5s ease-in-out;
+	transition: all 1s ease-out;
 	
 	display: grid;
 	place-items: center;
@@ -19,7 +19,7 @@
 
 	&:hover {
 		cursor: pointer;
-		&.darkTheme { box-shadow: 0 8px 12px rgba(255,255,255,0.1); }
+		&.darkTheme { box-shadow: 0 15px 15px rgba(255,255,255,0.1); }
 		&.lightTheme { box-shadow: var(--boxShadowLightTheme); }
 	}
 
