--- a/client/src/Ecosystems/User/EditUserDetails/SocialMediaLinks/SocialMediaLinks.module.scss
+++ b/client/src/Ecosystems/User/EditUserDetails/SocialMediaLinks/SocialMediaLinks.module.scss
@@ -1,26 +1,18 @@
-.basicInfo {
+.socialMediaLinks {
 	width: 100%;
 	height: auto;
 
 	display: grid;
 	grid-gap: 1.5rem;
 	align-content: space-around;
-	// grid-template-columns: repeat(auto-fill, );
-	// justify-items: center;
-	// justify-content: center;
+	justify-content: center;
+	grid-template-columns: 1fr 1fr;
+	grid-auto-flow: column;
 
 	@media(max-width: 800px) {
-		width: 100%;
 		align-content: space-around;
 		justify-content: center;
 		grid-template-columns: 1fr;
 		grid-auto-flow: row;
 	}
-}
-
-.bottom {
-	width: 100%;
-	height: auto;
-	display: grid;
-	place-content: center;
 }
