--- a/client/src/Ecosystems/Song/AddSong/AdvancedInfo/AdvancedInfo.module.scss
+++ b/client/src/Ecosystems/Song/AddSong/AdvancedInfo/AdvancedInfo.module.scss
@@ -5,17 +5,18 @@
 	display: grid;
 	grid-gap: 1.5rem;
 	align-content: space-around;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr;
+	//grid-template-columns: 1fr 1fr;
 	// grid-template-columns: repeat(auto-fill, );
 	// justify-items: center;
 	justify-content: center;
 
-	@media(max-width: 800px) {
-		align-content: space-around;
-		justify-content: center;
-		grid-template-columns: 1fr;
-		grid-auto-flow: row;
-	}
+	// @media(max-width: 800px) {
+	// 	align-content: space-around;
+	// 	justify-content: center;
+	// 	grid-template-columns: 1fr;
+	// 	grid-auto-flow: row;
+	// }
 }
 
 .bottom {
