--- a/client/src/Components/ContributorEntry/ContributorEntry.module.scss
+++ b/client/src/Components/ContributorEntry/ContributorEntry.module.scss
@@ -19,6 +19,7 @@
 			grid-auto-flow: column;
 			justify-content: space-between;
 			align-content: center;
+			align-items: center;
 		}
 
 		.body {
