--- a/client/src/Components/Galleries/TwoSizeCardGallery/TwoSizeCardGallery.module.scss
+++ b/client/src/Components/Galleries/TwoSizeCardGallery/TwoSizeCardGallery.module.scss
@@ -1,8 +1,8 @@
 .gallery {
 	width: 100%;
 	height: 100%;
-	padding-top: 30px;
-	padding-bottom: 30px;
+	// padding-top: 30px;
+	// padding-bottom: 30px;
 
 	display: grid;
 	grid-template-columns: repeat(auto-fill, var(--cardWidth));
