--- a/client/src/Ecosystems/ArtProject/ArtProjectDisplay/TopBar/TopBar.module.scss
+++ b/client/src/Ecosystems/ArtProject/ArtProjectDisplay/TopBar/TopBar.module.scss
@@ -1,10 +1,23 @@
 .topBar {
-	height: 75px;
+	height: 50px;
 	width: 100%;
+	padding: 0px 15px;
 	
 	display: grid;
 	grid-template-rows: 50px 1fr;
 	align-content: space-between;
+
+	&.darkTheme {
+		background: var(--black);
+		box-shadow: var(--boxShadowDarkTheme);
+	}
+
+	&.lightTheme {
+		background: var(--c_light);
+		box-shadow: var(--boxShadowLightTheme);
+	}
+
+	&.rounded { border-radius: 5px; }
 }
 
 .top {
