--- a/client/src/Ecosystems/ComponentPortal/ComponentPortal.module.scss
+++ b/client/src/Ecosystems/ComponentPortal/ComponentPortal.module.scss
@@ -1,4 +1,4 @@
-.updateSongGroup {
+.componentPortal {
 	height: auto;
 	min-height: 250px;
 	width: 600px;
@@ -52,80 +52,20 @@
 	&.rounded { border-radius: 5px 5px 0px 0px; }
 }
 
-.formBody {
+.body {
 	height: 100%;
 	width: 100%;
 	padding: 10px 30px 20px 30px;
 	position: relative;
 
 	display: grid;
-	grid-gap: 1.5rem;
+	grid-template-columns: repeat(auto-fill, 150px);
+	grid-gap: 2rem;
 	align-content: space-around;
 	justify-content: center;
 	justify-items: center;
-	grid-template-columns: 1fr;
+	// grid-template-columns: 1fr;
 }
-
-.bottom {
-	height: auto;
-	width: 150px;
-	display: grid;
-}
-
-a {
-
-	// width: auto;
-	width: 100%;
-	height: 100%;
-	padding: 0;
-
-	color: inherit;
-
-	display: grid;
-	place-items: center;
-
-	&:link {
-		text-decoration: none;
-
-		&:active { color: none; }
-	}
-
-	&:visited {
-		text-decoration: none;
-
-		&:active { color: none; }
-	}
-}
-
-.sectionTitleBar {
-	width: 100%;
-	height: auto;
-	padding: 5px 0px;
-
-	display: grid;
-	grid-auto-flow: column;
-	justify-content: space-between;
-	align-content: center;
-
-	& .right {
-		display: grid;
-		align-content: center;
-		justify-content: end;
-		grid-gap: 1rem;
-		grid-auto-flow: column;
-	}
-
-}
-
-
-
-
-
-
-
-
-
-
 
 
 
